footer z-index bug fix

--- a/src/styles/layout/footer.scss
+++ b/src/styles/layout/footer.scss
@@ -4,6 +4,7 @@
   width: 100%;
   flex-direction: column;
   align-items: center;
+  z-index: 1;
   & span{
     width: 100%;
     text-align: center;
